[tool.poetry]
name = "llama_hw"
version = "0.1.0"
description = "Llama homework project"
authors = ["Your Name <you@example.com>"]
packages = [{include = "llama_hw"}]

[tool.poetry.dependencies]
python = ">=3.11"
tqdm = "4.66.1"
requests = "2.31.0"
importlib-metadata = "3.7.0"
filelock = "3.0.12"
scikit-learn = "1.2.2"
numpy = "1.26.3"
tokenizers = "0.13.3"
sentencepiece = "0.1.99"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"